--- a/config.json
+++ b/config.json
@@ -2,5 +2,22 @@
     "title":"HealMake",
     "subTitle":"Test",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"last",
+    "displayTitle":"HealMake",
+    "homeUrl":"https://Heal6921.github.io",
+    "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "email":"610554940@163.com",
+    "startSite":"02/16/2015",
+    "filingNum":"浙ICP备20023628号",
+    "onePageListNum":15,
+    "singlePage":[],
+    "commentLabelColor":"#006b75",
+    "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
+    "i18n":"CN",
+    "UTC":+8,
+    "dayTheme":"light",
+    "nightTheme":"dark_colorblind",
+    "urlMode":"pinyin",
+    "style":"",
+    "script":"",
 }
